Fixed the #255 avatar stretching problem - please test (esp. on IE6) and comment in chat or somewhere! (see https://www.bevolunteer.org/trac/ticket/255)
git-svn-id: file:///home/jaliste/hcvol/hcvol/trunk@3478 4f49b16c-3c57-40ef-8e22-7452baa6c33a

--- a/htdocs/styles/YAML/screen/custom/forums.css
+++ b/htdocs/styles/YAML/screen/custom/forums.css
@@ -11,10 +11,12 @@ div.forumspost {
 	float:right; 
 } 
 div.forumsavatar {
-	width:80px;
 	position:relative;
-	height:80px;
 	margin:.5em auto;
+}
+div.forumsavatar img {
+  max-width:64px;
+  max-height:64px;
 }
 div.forumsauthorname {
 	font-weight: bold;
